--- a/Face_Detection_and_Count.ipynb
+++ b/Face_Detection_and_Count.ipynb
@@ -5,7 +5,10 @@
     "colab": {
       "name": "Face Detection and Count",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "mount_file_id": "1RwLzc9wFYuGpxO4jhhnzdyu_hJLDMqtb",
+      "authorship_tag": "ABX9TyNcL2Cj/FpWDSgQJ+bd2CMY",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/SSInimgba/Face-Detection/blob/main/Face_Detection_and_Count.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -35,43 +48,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yOIzJl1LNZ3z"
+        "id": "rUAT9jMluM2n"
       },
       "source": [
-        "!pip install deepface -q"
+        "!pip install mtcnn -q"
       ],
-      "execution_count": 1,
+      "execution_count": 10,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rUAT9jMluM2n",
-        "outputId": "a76e2fb9-d406-4e4f-f993-fb4b5e17274e"
-      },
-      "source": [
-        "!pip install mtcnn"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: mtcnn in /usr/local/lib/python3.6/dist-packages (0.1.0)\n",
-            "Requirement already satisfied: keras>=2.0.0 in /usr/local/lib/python3.6/dist-packages (from mtcnn) (2.4.3)\n",
-            "Requirement already satisfied: opencv-python>=4.1.0 in /usr/local/lib/python3.6/dist-packages (from mtcnn) (4.1.2.30)\n",
-            "Requirement already satisfied: numpy>=1.9.1 in /usr/local/lib/python3.6/dist-packages (from keras>=2.0.0->mtcnn) (1.19.5)\n",
-            "Requirement already satisfied: h5py in /usr/local/lib/python3.6/dist-packages (from keras>=2.0.0->mtcnn) (2.10.0)\n",
-            "Requirement already satisfied: scipy>=0.14 in /usr/local/lib/python3.6/dist-packages (from keras>=2.0.0->mtcnn) (1.4.1)\n",
-            "Requirement already satisfied: pyyaml in /usr/local/lib/python3.6/dist-packages (from keras>=2.0.0->mtcnn) (3.13)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from h5py->keras>=2.0.0->mtcnn) (1.15.0)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -82,7 +65,6 @@
         "import numpy as np\n",
         "from pathlib import Path\n",
         "import cv2\n",
-        "from deepface.commons import functions\n",
         "from mtcnn.mtcnn import MTCNN\n",
         "from matplotlib import pyplot as plt\n",
         "from matplotlib.patches import Rectangle"
