--- a/Face_Detection_and_Count.ipynb
+++ b/Face_Detection_and_Count.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1RwLzc9wFYuGpxO4jhhnzdyu_hJLDMqtb",
-      "authorship_tag": "ABX9TyNcL2Cj/FpWDSgQJ+bd2CMY",
+      "authorship_tag": "ABX9TyNWdlEeitrcdV6KEk76FUrC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -445,7 +445,7 @@
         "id": "Gaq3Ilqh-KFk"
       },
       "source": [
-        "MTCNN is better and more generalizable than the Haar Cascades and needs little to no finetuning to accurately detect a face in an image regardless of facial alignment\n",
+        "MTCNN is better and more generalizable than the Haar Cascades and needs little to no finetuning to accurately detect a face in an image regardless of facial alignment.\n",
         "\n",
         "\n",
         "\n"
