--- a/Face_Detection_and_Count.ipynb
+++ b/Face_Detection_and_Count.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1RwLzc9wFYuGpxO4jhhnzdyu_hJLDMqtb",
-      "authorship_tag": "ABX9TyNWdlEeitrcdV6KEk76FUrC",
+      "authorship_tag": "ABX9TyNKt4Omd3DKSNeYclrj4qUz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,8 @@
         "\n",
         "**TASKS**\n",
         " \n",
+        "- Given an input of A 2D grid of pixel values provided (in regular text format through STDIN) that represents the pixel-wise values from the images output the number of faces detected in the image. The input will contain two integers, R and C, representing the number of rows and columns of image pixels, respectively.\n",
+        "\n",
         "\n",
         "- Create a GitHub repository for your solution to the above problem.\n",
         "\n",
@@ -48,13 +50,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rUAT9jMluM2n"
+        "id": "rUAT9jMluM2n",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d01b94cc-fafc-4969-d5f7-68f2dba012ad"
       },
       "source": [
         "!pip install mtcnn -q"
       ],
-      "execution_count": 10,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[K     |████████████████████████████████| 2.3MB 5.6MB/s \n",
+            "\u001b[?25h"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -69,7 +84,7 @@
         "from matplotlib import pyplot as plt\n",
         "from matplotlib.patches import Rectangle"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -85,7 +100,7 @@
         "\n",
         "image_path_list = [image_1_path, image_2_path, image_3_path]"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -96,7 +111,7 @@
           "height": 728
         },
         "id": "Jibtf4cfCfh-",
-        "outputId": "eded98fc-d5a4-4cff-9b31-8adb092549b6"
+        "outputId": "45ef18b2-3535-4c40-a4c1-93fca4ad2948"
       },
       "source": [
         "images = []\n",
@@ -120,7 +135,7 @@
         "  plt.title(f'Image {i+1}')\n",
         "  plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -174,7 +189,7 @@
         "### Face Detection using Haar Cascades from  OpenCV. \n",
         "\n",
         "\n",
-        "This is dependent on a technique called **Classifier Cascade**, which consists of AdaBoosting algorithms that are trained to learn a range of very simple or weak features in each face, that together provide a robust classifier.\n",
+        "This is dependent on a technique called **Classifier Cascade**, which consists of AdaBoosting algorithms that are trained to learn a range of very simple or weak features in each face, Human faces share universal properties i.e the eyes region is darker than its neighbour pixels and nose region is brighter than eye region, so these models learn these featurures and together provide a robust classifier. \n",
         "\n",
         " These models are then arranged into a heircahy of increasing complexity to form a cascade. The less complex classifiers act like a filter by operating on candidate face regions directly, while the complex classifiers operate only on those candidate regions that show the most promise as faces, therfore resulting in a very fast and effective face detection algorithm. \n",
         "\n",
@@ -192,7 +207,7 @@
         "# load the model in xml to the openCV Cascade Classifier Class\n",
         "faceCascade = cv2.CascadeClassifier('/content/drive/MyDrive/NB/haarcascade_frontalface_default.xml')"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -217,7 +232,7 @@
           "height": 742
         },
         "id": "jm6RpzYa13bm",
-        "outputId": "ef4b6e14-9ab5-4e90-f3e5-d12d88cedfa0"
+        "outputId": "4241f2ab-3a3e-45a5-b6c1-af9eadf481a9"
       },
       "source": [
         "# convert the image to grayscale and detect faces using the detectMultiScale() function\n",
@@ -235,7 +250,7 @@
         "      plt.gca().add_patch(Rectangle((x,y), w, h, linewidth=1, edgecolor='r', facecolor='none'))\n",
         "  plt.show()"
       ],
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -329,7 +344,7 @@
       "source": [
         "# METHOD 2: Face Detection With Deep Learning (CHOSEN METHOD)\n",
         "\n",
-        "Using the **Multi-Task Cascaded Convolutional Neural Network (MTCNN)** which is popular because it achieved then state-of-the-art results on a range of benchmark datasets, and because it is capable of recognizing other facial features such as eyes and mouth, called landmark detection.\n",
+        "Using the **Multi-Task Cascaded Convolutional Neural Network (MTCNN)** which is popular because it achieved tstate-of-the-art results in 2016 on a range of benchmark datasets, and because it is capable of recognizing other facial features such as eyes and mouth, called landmark detection.\n",
         "\n",
         " The network uses a cascade structure with three networks; first the image is rescaled to a range of different sizes (called an image pyramid), then the first model (Proposal Network or P-Net) proposes candidate facial regions, the second model (Refine Network or R-Net) filters the bounding boxes, and the third model (Output Network or O-Net) proposes facial landmarks. \n",
         " \n",
@@ -349,7 +364,7 @@
         "# create the detector, using default weights\n",
         "detector = MTCNN()"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -360,7 +375,7 @@
           "height": 742
         },
         "id": "HxpSIuomwcPe",
-        "outputId": "162b3acd-6df1-4e5c-d520-49c43692a7cc"
+        "outputId": "811854a0-2b32-4413-dd67-2d7fc8364b67"
       },
       "source": [
         "# Detect faces using the detect_faces() function\n",
@@ -375,7 +390,7 @@
         "    plt.gca().add_patch(Rectangle((x,y), w, h, linewidth=1, edgecolor='r', facecolor='none'))\n",
         "  plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -445,7 +460,17 @@
         "id": "Gaq3Ilqh-KFk"
       },
       "source": [
-        "MTCNN is better and more generalizable than the Haar Cascades and needs little to no finetuning to accurately detect a face in an image regardless of facial alignment.\n",
+        "MTCNN is performs better and is more generalizable than the Haar Cascades and needs little to no finetuning to accurately detect a face in an image regardless of facial alignment. Testing it on other images also showed this generalibilty of the model.\n",
+        "\n",
+        "Example:\n",
+        " -  Accurate detection on different facial alignment and brightness\n",
+        "  \n",
+        "  ![Face Detection Improved](https://drive.google.com/uc?id=1NTyMJm6Y2rbMpG4_bxrlUEMafsoPjP1N)\n",
+        "\n",
+        "\n",
+        "  -  Accurate detection across race and gender\n",
+        "\n",
+        "   ![False positives increased](https://drive.google.com/uc?id=1WDl9U2GpU4uZtU_wg6PV_q9GKkL1Fo00)\n",
         "\n",
         "\n",
         "\n"
@@ -458,8 +483,27 @@
       },
       "source": [
         "# TASK 3:\n",
-        "## Are there other ways the problem could be solved? Discuss briefly"
+        "## Are there other ways the problem could be solved? Discuss briefly\n",
+        "\n",
+        "There are various methods that exist for face detection. Some of which are: \n",
+        "- Konwledge Based: \n",
+        "- Feature Based \n",
+        "- Template Matching\n",
+        "- Appearance Based\n",
+        "\n",
+        " The most common and succesful ones include openCV and deeplearning implementations which are used in this project."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1KGM7PiMKf-b"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 8,
+      "outputs": []
     }
   ]
 }
