--- a/Face_Detection_and_Count.ipynb
+++ b/Face_Detection_and_Count.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1RwLzc9wFYuGpxO4jhhnzdyu_hJLDMqtb",
-      "authorship_tag": "ABX9TyNKt4Omd3DKSNeYclrj4qUz",
+      "authorship_tag": "ABX9TyOd0zVGVaclpaxdBX6/5B2J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -484,26 +484,8 @@
       "source": [
         "# TASK 3:\n",
         "## Are there other ways the problem could be solved? Discuss briefly\n",
-        "\n",
-        "There are various methods that exist for face detection. Some of which are: \n",
-        "- Konwledge Based: \n",
-        "- Feature Based \n",
-        "- Template Matching\n",
-        "- Appearance Based\n",
-        "\n",
-        " The most common and succesful ones include openCV and deeplearning implementations which are used in this project."
+        "Because this project uses both machine learning via openCV and deep learning via MTCNN to solve the problem, other methods to solve this problem with great accuracy would be different implemenations of deep learning models, some of which can be viewed [here](https://paperswithcode.com/sota/face-detection-on-wider-face-hard)\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1KGM7PiMKf-b"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 8,
-      "outputs": []
     }
   ]
 }
