--- a/Face_Detection_and_Count.ipynb
+++ b/Face_Detection_and_Count.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1RwLzc9wFYuGpxO4jhhnzdyu_hJLDMqtb",
-      "authorship_tag": "ABX9TyOd0zVGVaclpaxdBX6/5B2J",
+      "authorship_tag": "ABX9TyOy9RvUWJMgKG2suGM7/5Jk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -184,7 +184,7 @@
         "id": "If0e2V-0zbnc"
       },
       "source": [
-        "# METHOD 1: Face Detection with OpenCV\n",
+        "# METHOD 1: Face Detection with Machine Learning\n",
         "\n",
         "### Face Detection using Haar Cascades from  OpenCV. \n",
         "\n",
