--- a/Face_Detection_and_Count.ipynb
+++ b/Face_Detection_and_Count.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1RwLzc9wFYuGpxO4jhhnzdyu_hJLDMqtb",
-      "authorship_tag": "ABX9TyOy9RvUWJMgKG2suGM7/5Jk",
+      "authorship_tag": "ABX9TyNKbMx95c4BebWFKHrZwQYX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -460,7 +460,7 @@
         "id": "Gaq3Ilqh-KFk"
       },
       "source": [
-        "MTCNN is performs better and is more generalizable than the Haar Cascades and needs little to no finetuning to accurately detect a face in an image regardless of facial alignment. Testing it on other images also showed this generalibilty of the model.\n",
+        "MTCNN performs better and is more generalizable than the Haar Cascades and needs little to no finetuning to accurately detect a face in an image regardless of facial alignment. Testing it on other images also showed this generalibilty of the model.\n",
         "\n",
         "Example:\n",
         " -  Accurate detection on different facial alignment and brightness\n",
