--- a/Face_Detection_and_Count.ipynb
+++ b/Face_Detection_and_Count.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1RwLzc9wFYuGpxO4jhhnzdyu_hJLDMqtb",
-      "authorship_tag": "ABX9TyNKbMx95c4BebWFKHrZwQYX",
+      "authorship_tag": "ABX9TyPqrnvyXRlaz1M0SanYEStN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -322,7 +322,7 @@
       "source": [
         "The haar cascade does not generalize well for all the images and only accurately detects all the images in the first image. From experimentation, we observed that each image deserves a different argument in the detectMultiScale function in order to detect the faces present in the image accurately.\n",
         "\n",
-        "If you notice the faces not detceted are mostly faces that are not aligned to the front (facing side ways). We can improve this by decreasing the minNeighbours to 3, but this results to false positives\n",
+        "If you notice, the faces not detceted are mostly faces that are not aligned to the front (facing side ways). We can improve this by decreasing the minNeighbours to 3, but this also results in false positives\n",
         ": \n",
         "\n",
         "\n",
